--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@types/node": "^20.11.30",
     "@typescript-eslint/eslint-plugin": "^7.2.0",
     "@typescript-eslint/parser": "^7.4.0",
+    "@types/dotenv": "^8.2.0",
     "eslint": "^8.52.0",
     "eslint-plugin-builderbot": "latest",
     "nodemon": "^3.1.0",
