--- a/package.json
+++ b/package.json
@@ -19,13 +19,14 @@
     "@google/generative-ai": "^0.24.0",
     "@langchain/core": "^0.3.48",
     "@langchain/google-genai": "^0.2.4",
-    "date-fns": "^4.1.0"
+    "date-fns": "^4.1.0",
+    "date-fns-tz": "^3.2.0"
   },
   "devDependencies": {
+    "@types/dotenv": "^8.2.0",
     "@types/node": "^20.11.30",
     "@typescript-eslint/eslint-plugin": "^7.2.0",
     "@typescript-eslint/parser": "^7.4.0",
-    "@types/dotenv": "^8.2.0",
     "eslint": "^8.52.0",
     "eslint-plugin-builderbot": "latest",
     "nodemon": "^3.1.0",
