Cambios considerables y refactorizacion

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -3,6 +3,7 @@
     "accesible",
     "acción",
     "acciones",
+    "actividad",
     "actividades",
     "actualizado",
     "Actualizar",
@@ -12,26 +13,38 @@
     "adicionales",
     "afirmativas",
     "Agrega",
+    "ahora",
+    "ajustable",
     "ajustables",
     "ajustan",
     "ajuste",
     "Alcance",
+    "algún",
     "alguna",
     "algunas",
     "Almacena",
+    "ALUMINIO",
     "amigable",
+    "Añade",
     "Análisis",
     "Analiza",
     "analizar",
     "anteriores",
+    "antigravedad",
+    "aplica",
     "aplicación",
     "Aplicar",
     "aquí",
     "ascendente",
+    "asesor",
     "asesoramiento",
+    "asesorarte",
+    "asesoría",
     "asistente",
     "atractiva",
+    "automático",
     "avanzadas",
+    "avanzado",
     "avanzar",
     "ayuda",
     "ayudan",
@@ -41,6 +54,7 @@
     "Baja",
     "basado",
     "básico",
+    "beneficios",
     "blanco",
     "buen",
     "busca",
@@ -51,15 +65,23 @@
     "cabecero",
     "cada",
     "cadena",
+    "cálida",
     "calidad",
+    "cálido",
     "cambias",
     "característica",
+    "Cargando",
+    "cargar",
     "categoría",
     "categorías",
+    "cercana",
     "clarificación",
+    "clásico",
     "cliente",
     "clientes",
     "coincidan",
+    "coincidencias",
+    "comercializa",
     "Cómo",
     "comodidad",
     "compartidos",
@@ -68,8 +90,14 @@
     "comprender",
     "Comprender",
     "conciso",
+    "conectará",
+    "confort",
+    "conocer",
     "conoces",
     "Consideraciones",
+    "construir",
+    "Construir",
+    "Construye",
     "consulta",
     "Consultas",
     "contacto",
@@ -79,10 +107,14 @@
     "contenido",
     "contexto",
     "contiene",
+    "continúa",
+    "Continuemos",
     "conversación",
+    "conversacional",
     "Convierte",
     "crea",
     "Criterios",
+    "CROMADA",
     "Cuál",
     "cuando",
     "cuanto",
@@ -91,8 +123,10 @@
     "darás",
     "datos",
     "debe",
+    "decir",
     "declaración",
     "dentro",
+    "desconocido",
     "descripción",
     "Descripción",
     "desde",
@@ -109,12 +143,21 @@
     "Devuelve",
     "diario",
     "días",
+    "diferentes",
+    "dinámico",
     "directamente",
+    "diseño",
+    "Diseño",
     "disponible",
     "Disponibles",
+    "donde",
     "Doro",
+    "ecológicos",
     "ejecutivo",
     "Ejemplo",
+    "elección",
+    "Elegancia",
+    "elegante",
     "elegir",
     "encontrar",
     "encontré",
@@ -123,21 +166,31 @@
     "Entendido",
     "entiende",
     "entiendo",
+    "entrega",
     "enviado",
     "enviando",
     "enviar",
     "Eres",
+    "Ergomax",
+    "ergonomía",
     "ergonómica",
     "ergonómicas",
+    "ergonómico",
+    "ergonómicos",
     "escuchando",
     "espacios",
+    "espalda",
+    "especialidad",
+    "especialización",
     "especializada",
     "especializado",
     "especialmente",
     "Específicas",
     "específico",
+    "Espera",
     "está",
     "estado",
+    "están",
     "estaré",
     "Estaremos",
     "estas",
@@ -151,23 +204,40 @@
     "estudio",
     "excesiva",
     "existe",
+    "existen",
+    "experiencia",
     "experto",
+    "explica",
+    "explora",
     "explorando",
     "extraer",
     "Extraer",
     "fecha",
+    "ficha",
     "Filtra",
     "filtrado",
     "filtrados",
+    "filtrar",
+    "Filtrar",
     "filtro",
+    "físicas",
     "flujo",
     "Formatea",
+    "formatear",
     "formato",
+    "foto",
     "Fuera",
+    "Función",
     "funcionales",
+    "Funcionalidad",
+    "futura",
+    "garantía",
+    "garantías",
     "generales",
     "generar",
     "genérico",
+    "GERENCIAL",
+    "GERENTE",
     "gestionar",
     "gracias",
     "Guarda",
@@ -197,6 +267,7 @@
     "iniciales",
     "Iniciando",
     "iniciar",
+    "innecesarios",
     "Instrucciones",
     "integrándolas",
     "intención",
@@ -208,7 +279,11 @@
     "interactuar",
     "interés",
     "interese",
+    "introducción",
     "jerga",
+    "jornadas",
+    "largas",
+    "líder",
     "Limita",
     "Limitar",
     "Limpia",
@@ -217,17 +292,26 @@
     "línea",
     "lista",
     "Lista",
+    "listo",
+    "Llamar",
+    "lógica",
+    "Lujo",
     "malla",
     "manejar",
     "manejarlo",
     "Manejo",
     "Mantén",
+    "Marca",
+    "marcas",
     "materiales",
+    "Máxima",
     "máximo",
     "mejor",
     "mejorar",
     "memoria",
     "Menciona",
+    "menciónalas",
+    "mencionar",
     "mensaje",
     "mensajes",
     "mente",
@@ -235,8 +319,12 @@
     "minimalista",
     "mínimo",
     "minuto",
+    "minutos",
     "Modelo",
+    "modelos",
+    "moderna",
     "moderno",
+    "molestias",
     "momento",
     "Mostrar",
     "muchas",
@@ -246,17 +334,25 @@
     "necesita",
     "necesitas",
     "Necesitas",
+    "NEFI",
     "negativas",
+    "Negra",
+    "NEGRA",
     "niveles",
     "noches",
     "nombre",
     "Nombre",
+    "normalmente",
+    "Nuestra",
     "nuestras",
+    "nuestros",
     "nuevamente",
     "nuevo",
     "Número",
     "objetivo",
     "Objetivo",
+    "objetos",
+    "Obtener",
     "obtenido",
     "ocasional",
     "ocupacional",
@@ -264,18 +360,26 @@
     "Ofertas",
     "oficina",
     "ofrece",
+    "Ofrecemos",
     "opción",
     "Opcional",
     "opciones",
+    "OPERATIVA",
     "opinión",
+    "óptima",
     "Ordena",
     "ordenada",
     "otras",
     "palabra",
+    "parecer",
     "pasar",
+    "pasas",
     "pedir",
+    "pero",
     "personalizada",
+    "personalizar",
     "persuadir",
+    "pide",
     "podemos",
     "Podrías",
     "Posibles",
@@ -286,6 +390,7 @@
     "preferencias",
     "Prefieres",
     "pregunta",
+    "preguntan",
     "preguntar",
     "preguntas",
     "Preguntas",
@@ -293,11 +398,14 @@
     "presenta",
     "presentación",
     "Presentación",
+    "Presidencial",
+    "PRESIDENCIAL",
     "preventa",
     "primera",
     "principalmente",
     "Prioridad",
     "Procesar",
+    "procese",
     "proceso",
     "producto",
     "productos",
@@ -308,6 +416,8 @@
     "proporciona",
     "pude",
     "pudo",
+    "puedo",
+    "quedamos",
     "quieres",
     "rango",
     "rápidas",
@@ -315,8 +425,16 @@
     "recibida",
     "recibido",
     "reclinable",
+    "Reclinación",
+    "recomendación",
     "recomendaciones",
+    "recomendada",
+    "recomendados",
+    "recomendando",
     "recomendarte",
+    "recomienda",
+    "Recomienda",
+    "reconocidas",
     "reconoció",
     "Recupera",
     "Redirigiendo",
@@ -324,12 +442,19 @@
     "refieres",
     "refinar",
     "reformularlo",
+    "refresca",
     "Reiniciar",
     "relacionada",
     "relevante",
     "relevantes",
     "reposabrazos",
+    "reposacabezas",
+    "reposapies",
+    "reposapiés",
+    "resalta",
+    "resaltando",
     "Reserva",
+    "respaldo",
     "respetuosa",
     "respetuoso",
     "responde",
@@ -340,6 +465,8 @@
     "retomar",
     "rígido",
     "salud",
+    "saluda",
+    "saludar",
     "saludo",
     "Saludo",
     "saludos",
@@ -350,12 +477,15 @@
     "según",
     "segundos",
     "seguro",
+    "selección",
     "selecciona",
     "seleccionado",
     "seleccionar",
     "sentado",
+    "Serializa",
     "servicial",
     "Servidor",
+    "siempre",
     "siento",
     "sigamos",
     "Sigamos",
@@ -364,21 +494,33 @@
     "silla",
     "Silla",
     "Sillas",
+    "simulado",
+    "simulados",
     "sobre",
+    "sofisticado",
+    "solicita",
     "solicitud",
     "soporte",
+    "suele",
     "sueles",
     "suficiente",
     "Sugeridas",
+    "sugerir",
     "superiores",
+    "también",
     "tardes",
     "tarea",
     "técnica",
+    "tecnicismos",
     "teléfono",
+    "teletrabajo",
+    "tenemos",
     "tenga",
     "tengas",
     "texto",
     "tiempo",
+    "tienda",
+    "tiene",
     "Tienes",
     "tipar",
     "tipo",
@@ -387,6 +529,7 @@
     "trabajar",
     "trabajo",
     "Trabajo",
+    "Última",
     "Últimamente",
     "último",
     "últimos",
@@ -399,12 +542,15 @@
     "Usuario",
     "usuarios",
     "útil",
+    "Utilidad",
     "utiliza",
     "vacío",
     "válida",
     "Validar",
     "válidas",
+    "varias",
     "vendedor",
+    "ventajas",
     "Verificar",
     "Versión"
   ]
