Cambio en la intención y detección de inteción

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -13,6 +13,7 @@
     "adicionales",
     "afirmativas",
     "Agrega",
+    "agregar",
     "ahora",
     "ajustable",
     "ajustables",
@@ -31,6 +32,7 @@
     "analizar",
     "anteriores",
     "antigravedad",
+    "aparecen",
     "aplica",
     "aplicación",
     "Aplicar",
@@ -38,11 +40,17 @@
     "ascendente",
     "asesor",
     "asesoramiento",
+    "asesorar",
     "asesorarte",
     "asesoría",
     "asistente",
     "atractiva",
+    "autenticación",
+    "AUTENTICACIÓN",
+    "autenticado",
     "automático",
+    "autorización",
+    "autorizado",
     "avanzadas",
     "avanzado",
     "avanzar",
@@ -109,10 +117,14 @@
     "contiene",
     "continúa",
     "Continuemos",
+    "Contraseña",
     "conversación",
     "conversacional",
     "Convierte",
+    "Correo",
     "crea",
+    "crear",
+    "Credenciales",
     "Criterios",
     "CROMADA",
     "Cuál",
@@ -131,6 +143,7 @@
     "Descripción",
     "desde",
     "desea",
+    "deseas",
     "después",
     "Detalladas",
     "detallado",
@@ -144,6 +157,7 @@
     "diario",
     "días",
     "diferentes",
+    "dinámicamente",
     "dinámico",
     "directamente",
     "diseño",
@@ -153,12 +167,16 @@
     "donde",
     "Doro",
     "ecológicos",
+    "editar",
     "ejecutivo",
     "Ejemplo",
     "elección",
     "Elegancia",
     "elegante",
     "elegir",
+    "eliminar",
+    "empresa",
+    "encontrado",
     "encontrar",
     "encontré",
     "entender",
@@ -168,6 +186,7 @@
     "entiendo",
     "entrega",
     "enviado",
+    "enviados",
     "enviando",
     "enviar",
     "Eres",
@@ -205,6 +224,7 @@
     "excesiva",
     "existe",
     "existen",
+    "existentes",
     "experiencia",
     "experto",
     "explica",
@@ -262,6 +282,8 @@
     "incluyendo",
     "incompletas",
     "información",
+    "Ingresando",
+    "Ingresar",
     "inicia",
     "Inicial",
     "iniciales",
@@ -280,6 +302,9 @@
     "interés",
     "interese",
     "introducción",
+    "inválidas",
+    "inválido",
+    "inventes",
     "jerga",
     "jornadas",
     "largas",
@@ -329,6 +354,7 @@
     "Mostrar",
     "muchas",
     "muestra",
+    "muteado",
     "necesario",
     "necesidades",
     "necesita",
@@ -414,8 +440,10 @@
     "Promociones",
     "Propaga",
     "proporciona",
+    "proporcionada",
     "pude",
     "pudo",
+    "puede",
     "puedo",
     "quedamos",
     "quieres",
@@ -458,6 +486,7 @@
     "respetuosa",
     "respetuoso",
     "responde",
+    "responderá",
     "responderé",
     "respondió",
     "Respuesta",
@@ -485,6 +514,7 @@
     "Serializa",
     "servicial",
     "Servidor",
+    "sesión",
     "siempre",
     "siento",
     "sigamos",
