--- a/package.json
+++ b/package.json
@@ -16,31 +16,34 @@
     "@builderbot-plugins/url-to-base64": "^1.0.0",
     "@builderbot/bot": "1.2.5",
     "@builderbot/provider-meta": "1.2.5",
-    "@google/generative-ai": "^0.24.0",
-    "@langchain/core": "^0.3.48",
-    "@langchain/google-genai": "^0.2.4",
+    "@google/generative-ai": "^0.24.1",
+    "@langchain/core": "^0.3.55",
+    "@langchain/google-genai": "^0.2.7",
+    "bcryptjs": "^3.0.2",
     "chalk": "^5.4.1",
     "chrono-node": "^2.8.0",
     "clsx": "^2.1.1",
     "date-fns": "^4.1.0",
     "date-fns-tz": "^3.2.0",
+    "jsonwebtoken": "^9.0.2",
     "lucide-react": "^0.507.0",
     "pg": "^8.15.6",
     "tailwind-merge": "^3.2.0"
   },
   "devDependencies": {
-    "@types/dotenv": "^8.2.0",
-    "@types/node": "^20.11.30",
-    "@types/pg": "^8.11.14",
-    "@typescript-eslint/eslint-plugin": "^7.2.0",
-    "@typescript-eslint/parser": "^7.4.0",
-    "eslint": "^8.52.0",
+    "@types/dotenv": "^8.2.3",
+    "@types/jsonwebtoken": "^9.0.9",
+    "@types/node": "^20.17.46",
+    "@types/pg": "^8.15.1",
+    "@typescript-eslint/eslint-plugin": "^7.18.0",
+    "@typescript-eslint/parser": "^7.18.0",
+    "eslint": "^8.57.1",
     "eslint-plugin-builderbot": "latest",
-    "nodemon": "^3.1.0",
-    "rollup": "^4.10.0",
+    "nodemon": "^3.1.10",
+    "rollup": "^4.40.2",
     "rollup-plugin-typescript2": "^0.36.0",
-    "tsx": "^4.7.1",
-    "typescript": "^5.4.3"
+    "tsx": "^4.19.4",
+    "typescript": "^5.8.3"
   },
   "author": "",
   "license": "ISC"
