--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,5 +1,7 @@
 {
   "cSpell.words": [
+    "abrumar",
+    "acaso",
     "accesible",
     "acción",
     "acciones",
@@ -7,17 +9,22 @@
     "actividades",
     "actualizado",
     "Actualizar",
+    "acusa",
+    "Acusa",
     "Adapta",
     "Adaptar",
     "adecuada",
+    "adicional",
     "adicionales",
     "afirmativas",
+    "agente",
     "Agrega",
     "agregar",
     "ahora",
     "ajustable",
     "ajustables",
     "ajustan",
+    "ajustarse",
     "ajuste",
     "Alcance",
     "algún",
@@ -27,6 +34,7 @@
     "ALUMINIO",
     "amigable",
     "Añade",
+    "Añadimos",
     "Análisis",
     "Analiza",
     "analizar",
@@ -36,15 +44,20 @@
     "aplica",
     "aplicación",
     "Aplicar",
+    "apropiado",
     "aquí",
+    "archivo",
     "ascendente",
+    "Aseguramos",
     "asesor",
+    "asesora",
     "asesoramiento",
     "asesorar",
     "asesorarte",
     "asesoría",
     "asistente",
     "atractiva",
+    "Aunque",
     "autenticación",
     "AUTENTICACIÓN",
     "autenticado",
@@ -59,12 +72,19 @@
     "ayudándote",
     "ayudar",
     "ayudarte",
+    "ayudo",
     "Baja",
     "basado",
+    "basándose",
+    "basándote",
+    "Basándote",
     "básico",
     "beneficios",
     "blanco",
+    "brevemente",
+    "brinda",
     "buen",
+    "buena",
     "busca",
     "buscando",
     "Buscar",
@@ -78,27 +98,42 @@
     "cálido",
     "cambias",
     "característica",
+    "características",
     "Cargando",
     "cargar",
+    "catálogo",
     "categoría",
     "categorías",
     "cercana",
+    "cercanas",
+    "claramente",
     "clarificación",
     "clásico",
     "cliente",
     "clientes",
     "coincidan",
     "coincidencias",
+    "combinar",
     "comercializa",
     "Cómo",
+    "cómoda",
     "comodidad",
+    "compartido",
     "compartidos",
     "completa",
+    "completo",
+    "completos",
+    "compra",
+    "comprar",
     "compre",
+    "comprende",
     "comprender",
     "Comprender",
+    "concisa",
     "conciso",
+    "concreta",
     "conectará",
+    "confirmando",
     "confort",
     "conocer",
     "conoces",
@@ -115,6 +150,7 @@
     "contenido",
     "contexto",
     "contiene",
+    "contigo",
     "continúa",
     "Continuemos",
     "Contraseña",
@@ -122,6 +158,7 @@
     "conversacional",
     "Convierte",
     "Correo",
+    "corto",
     "crea",
     "crear",
     "Credenciales",
@@ -132,12 +169,15 @@
     "cuanto",
     "Cuánto",
     "cuestionario",
+    "Damos",
     "darás",
     "datos",
     "debe",
     "decir",
     "declaración",
+    "Definición",
     "dentro",
+    "descendente",
     "desconocido",
     "descripción",
     "Descripción",
@@ -162,23 +202,31 @@
     "directamente",
     "diseño",
     "Diseño",
+    "disponibilidad",
     "disponible",
     "Disponibles",
     "donde",
     "Doro",
+    "duplicados",
     "ecológicos",
     "editar",
     "ejecutivo",
     "Ejemplo",
+    "Ejemplos",
     "elección",
     "Elegancia",
     "elegante",
     "elegir",
     "eliminar",
     "empresa",
+    "encargará",
     "encontrado",
+    "encontramos",
     "encontrar",
+    "encontraron",
     "encontré",
+    "encuentran",
+    "enfócate",
     "entender",
     "entendí",
     "Entendido",
@@ -187,6 +235,7 @@
     "entrega",
     "enviado",
     "enviados",
+    "Envíame",
     "enviando",
     "enviar",
     "Eres",
@@ -206,10 +255,12 @@
     "especialmente",
     "Específicas",
     "específico",
+    "específicos",
     "Espera",
     "está",
     "estado",
     "están",
+    "estará",
     "estaré",
     "Estaremos",
     "estas",
@@ -217,10 +268,18 @@
     "esté",
     "estilo",
     "Estilo",
+    "Esto",
     "estoy",
+    "Estrategia",
     "Estrategias",
+    "estrictamente",
     "estructura",
+    "estructurada",
     "estudio",
+    "eventualmente",
+    "Evitar",
+    "exactamente",
+    "exactos",
     "excesiva",
     "existe",
     "existen",
@@ -228,24 +287,38 @@
     "experiencia",
     "experto",
     "explica",
+    "explicación",
+    "explícitamente",
+    "explícito",
     "explora",
     "explorando",
+    "explorar",
+    "expresiones",
     "extraer",
     "Extraer",
+    "facilita",
+    "facilitar",
+    "falsos",
     "fecha",
     "ficha",
+    "fichas",
     "Filtra",
+    "filtrada",
     "filtrado",
     "filtrados",
     "filtrar",
     "Filtrar",
     "filtro",
     "físicas",
+    "flexibilidad",
+    "flexibles",
+    "fluida",
     "flujo",
     "Formatea",
     "formatear",
     "formato",
     "foto",
+    "frases",
     "Fuera",
     "Función",
     "funcionales",
@@ -263,24 +336,47 @@
     "Guarda",
     "guardado",
     "Guardar",
+    "guía",
+    "Guía",
+    "guiadora",
     "Guiadoras",
+    "Guiando",
     "guiar",
     "guíe",
     "gustaría",
     "hablábamos",
     "HABLAR",
     "hace",
+    "hacemos",
+    "Hacemos",
     "hacer",
+    "haces",
     "hacia",
     "historial",
     "Historial",
+    "humano",
+    "idealmente",
+    "Identifica",
+    "identificación",
     "identificada",
     "identificar",
+    "identificas",
+    "identifiqué",
+    "identifiques",
+    "ignora",
+    "imagen",
+    "impliquen",
     "Importa",
+    "importada",
     "IMPORTANTE",
     "inactividad",
+    "Incluye",
+    "Inclúyelo",
     "incluyendo",
     "incompletas",
+    "indica",
+    "indicar",
+    "indique",
     "información",
     "Ingresando",
     "Ingresar",
@@ -296,37 +392,52 @@
     "Intención",
     "intenciones",
     "intensivas",
+    "inténtalo",
+    "intentar",
+    "Intentará",
     "Interacción",
     "interactivo",
     "interactuar",
     "interés",
+    "interesarte",
     "interese",
+    "interno",
     "introducción",
     "inválidas",
     "inválido",
     "inventes",
+    "invito",
     "jerga",
     "jornadas",
     "largas",
     "líder",
     "Limita",
     "Limitar",
+    "límites",
     "Limpia",
     "limpiado",
     "limpiar",
     "línea",
     "lista",
     "Lista",
+    "listados",
+    "listar",
+    "Listar",
+    "listes",
     "listo",
     "Llamar",
+    "lleven",
     "lógica",
+    "longitud",
     "Lujo",
     "malla",
     "manejar",
     "manejarlo",
     "Manejo",
     "Mantén",
+    "manteniendo",
     "Marca",
+    "marcador",
     "marcas",
     "materiales",
     "Máxima",
@@ -335,8 +446,15 @@
     "mejorar",
     "memoria",
     "Menciona",
+    "mencionadas",
+    "mencionados",
     "menciónalas",
+    "mencionando",
+    "mencionándolo",
     "mencionar",
+    "mencionas",
+    "mencionó",
+    "menos",
     "mensaje",
     "mensajes",
     "mente",
@@ -345,21 +463,32 @@
     "mínimo",
     "minuto",
     "minutos",
+    "mismo",
     "Modelo",
     "modelos",
     "moderna",
     "moderno",
     "molestias",
     "momento",
+    "Mostrando",
     "Mostrar",
+    "mostrará",
+    "mostró",
     "muchas",
+    "muchos",
     "muestra",
+    "muestre",
+    "muestro",
+    "múltiples",
     "muteado",
+    "Nacional",
+    "naturalmente",
     "necesario",
     "necesidades",
     "necesita",
     "necesitas",
     "Necesitas",
+    "Necesito",
     "NEFI",
     "negativas",
     "Negra",
@@ -368,16 +497,20 @@
     "noches",
     "nombre",
     "Nombre",
+    "nombres",
     "normalmente",
     "Nuestra",
     "nuestras",
+    "nuestro",
     "nuestros",
     "nuevamente",
     "nuevo",
     "Número",
+    "Nunca",
     "objetivo",
     "Objetivo",
     "objetos",
+    "Obligatorio",
     "Obtener",
     "obtenido",
     "ocasional",
@@ -395,23 +528,40 @@
     "óptima",
     "Ordena",
     "ordenada",
+    "Ordenar",
+    "orienta",
+    "Orientación",
     "otras",
+    "pago",
     "palabra",
+    "parcial",
     "parecer",
+    "partida",
+    "partir",
+    "pasando",
     "pasar",
     "pasas",
+    "pasos",
     "pedir",
     "pero",
     "personalizada",
     "personalizar",
     "persuadir",
+    "Persuasión",
+    "pida",
     "pide",
     "podemos",
+    "Podríamos",
+    "podrían",
     "Podrías",
+    "pondré",
+    "posibilidad",
     "Posibles",
+    "positivos",
     "postura",
     "precio",
     "precios",
+    "predefinido",
     "preferencia",
     "preferencias",
     "Prefieres",
@@ -424,10 +574,12 @@
     "presenta",
     "presentación",
     "Presentación",
+    "presentar",
     "Presidencial",
     "PRESIDENCIAL",
     "preventa",
     "primera",
+    "principales",
     "principalmente",
     "Prioridad",
     "Procesar",
@@ -436,6 +588,7 @@
     "producto",
     "productos",
     "profesional",
+    "profundizar",
     "promociones",
     "Promociones",
     "Propaga",
@@ -443,15 +596,21 @@
     "proporcionada",
     "pude",
     "pudo",
+    "puedas",
     "puede",
     "puedo",
+    "punto",
+    "puntuación",
     "quedamos",
     "quieres",
+    "Quiero",
+    "quitando",
     "rango",
     "rápidas",
     "realizar",
     "recibida",
     "recibido",
+    "recibo",
     "reclinable",
     "Reclinación",
     "recomendación",
@@ -459,10 +618,16 @@
     "recomendada",
     "recomendados",
     "recomendando",
+    "recomendar",
     "recomendarte",
     "recomienda",
     "Recomienda",
+    "recomiendan",
+    "recomiendas",
+    "recomiendo",
+    "reconoce",
     "reconocidas",
+    "Reconocimiento",
     "reconoció",
     "Recupera",
     "Redirigiendo",
@@ -471,8 +636,13 @@
     "refinar",
     "reformularlo",
     "refresca",
+    "regulares",
     "Reiniciar",
+    "Reitera",
+    "relación",
     "relacionada",
+    "relacionados",
+    "relativamente",
     "relevante",
     "relevantes",
     "reposabrazos",
@@ -486,12 +656,15 @@
     "respetuosa",
     "respetuoso",
     "responde",
+    "respóndelas",
     "responderá",
     "responderé",
     "respondió",
     "Respuesta",
     "respuestas",
+    "resultados",
     "retomar",
+    "revisar",
     "rígido",
     "salud",
     "saluda",
@@ -499,6 +672,7 @@
     "saludo",
     "Saludo",
     "saludos",
+    "sección",
     "segmentación",
     "Segmentación",
     "segmentar",
@@ -511,6 +685,7 @@
     "seleccionado",
     "seleccionar",
     "sentado",
+    "separado",
     "Serializa",
     "servicial",
     "Servidor",
@@ -520,6 +695,7 @@
     "sigamos",
     "Sigamos",
     "siguiente",
+    "siguientes",
     "Sihoo",
     "silla",
     "Silla",
@@ -529,6 +705,7 @@
     "sobre",
     "sofisticado",
     "solicita",
+    "solicitada",
     "solicitud",
     "soporte",
     "suele",
@@ -537,6 +714,7 @@
     "Sugeridas",
     "sugerir",
     "superiores",
+    "Sutil",
     "también",
     "tardes",
     "tarea",
@@ -547,13 +725,17 @@
     "tenemos",
     "tenga",
     "tengas",
+    "tengo",
+    "termina",
     "texto",
     "tiempo",
     "tienda",
     "tiene",
+    "Tienen",
     "Tienes",
     "tipar",
     "tipo",
+    "toda",
     "tono",
     "Tono",
     "trabajar",
@@ -563,11 +745,15 @@
     "Últimamente",
     "último",
     "últimos",
+    "únicamente",
     "único",
     "usado",
+    "Usamos",
     "usando",
     "usar",
     "usarás",
+    "usarías",
+    "usas",
     "usuario",
     "Usuario",
     "usuarios",
@@ -578,8 +764,11 @@
     "válida",
     "Validar",
     "válidas",
+    "variantes",
     "varias",
+    "varios",
     "vendedor",
+    "Venta",
     "ventajas",
     "Verificar",
     "Versión"
